--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blogger-again",
   "private": true,
   "dependencies": {
+    "node-sass": "5.0",
     "@rails/actioncable": "^6.0.0",
     "@rails/activestorage": "^6.0.0",
     "@rails/ujs": "^6.0.0",
